Add bcrypt dependency for password hashing

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pandas==2.1.4
 # Utilidades
 python-dotenv==1.0.0
 Werkzeug==2.3.7
+bcrypt==4.1.2
 
 # Dependencias adicionales para Cloud Run
 gunicorn==21.2.0
