--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-CORS==4.0.0
 
 # Base de datos
 PyMySQL==1.1.0
+mysql-connector-python==8.2.0
 cryptography==41.0.7
 
 # Manejo de archivos Excel
