--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-CORS==4.0.0
 PyMySQL==1.1.0
 mysql-connector-python==8.2.0
 cryptography==41.0.7
+bcrypt==4.1.2
 
 # Manejo de archivos Excel
 openpyxl==3.1.2
